Changed game to WPF

--- a/GameTest/GameTest.csproj
+++ b/GameTest/GameTest.csproj
@@ -54,7 +54,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
+    <Compile Include="ViewModel\ViewModel.cs" />
+    <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -62,12 +63,22 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Items\InventoryItem.cs" />
+    <Compile Include="Model\Items\Swords.cs" />
+    <Compile Include="Model\Items\Weapons.cs" />
+    <Compile Include="Model\LivingThings\LivingCreatures.cs" />
+    <Compile Include="Model\LivingThings\Monster.cs" />
+    <Compile Include="Model\LivingThings\Player.cs" />
+    <Compile Include="Model\MapNLocations\GenericMap.cs" />
+    <Compile Include="Model\MapNLocations\MapForWorldOne.cs" />
+    <Compile Include="Model\MapNLocations\PlayerMovement.cs" />
+    <Compile Include="Model\MapNLocations\TownCenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -93,5 +104,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
