Safe commit before shit fucks up

--- a/GameTest/GameTest.csproj
+++ b/GameTest/GameTest.csproj
@@ -54,6 +54,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\TextBasedStory\StartingZone.cs" />
     <Compile Include="ViewModel\ViewModel.cs" />
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
